samples/_failures_safe/1761205386_72b509_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_941bd236.c: In function ‘main’:
./samples/SAFE/__tmp_941bd236.c:162:5: error: expected declaration or statement at end of input
  162 |     Graph graph;
      |     ^~~~~
